--- a/assets/css/sass/woocommerce/woocommerce-icon.scss
+++ b/assets/css/sass/woocommerce/woocommerce-icon.scss
@@ -8,3 +8,13 @@
 	font-weight: 400;
 	font-style: normal
 }
+@font-face {
+	font-family: 'WooCommerce';
+	src: url(../../plugins/woocommerce/assets/fonts/WooCommerce.eot);
+	src: url(../../plugins/woocommerce/assets/fonts/WooCommerce.eot?#iefix) format("embedded-opentype"),
+	url(../../plugins/woocommerce/assets/fonts/WooCommerce.woff) format("woff"),
+	url(../../plugins/woocommerce/assets/fonts/WooCommerce.ttf) format("truetype"),
+	url(../../plugins/woocommerce/assets/fonts/WooCommerce.svg#WooCommerce) format("svg");
+	font-weight: 400;
+	font-style: normal
+}
