--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -461,26 +461,22 @@ $size: 40px;
 	}
 
 	&:before {
-		content: '';
-		display: inline-flex;
-		margin-right: 10px;
-		background-size: 14px;
-		width: 14px;
-		height: 14px;
+		font-family: 'WooCommerce';
+		content: "\e028";
+		color: #fff;
+	    display: inline-flex;
+	    margin-right: 10px;
 	}
 }
 
-/* .woocommerce-error {
+.woocommerce-error {
 	&:before {
-		content: "\e720";
+		content: "\e016";
 	}
 }
 
 
 .woocommerce-info {
-	&:before {
-		content: "\e71f";
-	}
 	input[type="submit"] {
 		padding: 0 5px;
 		margin-left: 5px;
@@ -489,9 +485,9 @@ $size: 40px;
 
 .woocommerce-message {
 	&:before {
-		content: "\e64d";
+		content: "\e015";
 	}
-} */
+}
 
 .woocommerce-form-coupon-toggle,
 .woocommerce-form-login-toggle {
