--- a/style.css
+++ b/style.css
@@ -6917,6 +6917,14 @@ header.elementor-element {
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'WooCommerce';
+  src: url(../../plugins/woocommerce/assets/fonts/WooCommerce.eot);
+  src: url(../../plugins/woocommerce/assets/fonts/WooCommerce.eot?#iefix) format("embedded-opentype"), url(../../plugins/woocommerce/assets/fonts/WooCommerce.woff) format("woff"), url(../../plugins/woocommerce/assets/fonts/WooCommerce.ttf) format("truetype"), url(../../plugins/woocommerce/assets/fonts/WooCommerce.svg#WooCommerce) format("svg");
+  font-weight: 400;
+  font-style: normal;
+}
+
 .hide-added-to-cart .product-loop-meta .animated-meta .added {
   display: inline-flex;
 }
@@ -7358,36 +7366,26 @@ header.elementor-element {
 .woocommerce-error:before,
 .woocommerce-info:before,
 .woocommerce-message:before {
-  content: '';
+  font-family: 'WooCommerce';
+  content: "\e028";
+  color: #fff;
   display: inline-flex;
   margin-right: 10px;
-  background-size: 14px;
-  width: 14px;
-  height: 14px;
 }
 
-/* .woocommerce-error {
-	&:before {
-		content: "\e720";
-	}
+.woocommerce-error:before {
+  content: "\e016";
 }
 
-
-.woocommerce-info {
-	&:before {
-		content: "\e71f";
-	}
-	input[type="submit"] {
-		padding: 0 5px;
-		margin-left: 5px;
-	}
+.woocommerce-info input[type="submit"] {
+  padding: 0 5px;
+  margin-left: 5px;
 }
 
-.woocommerce-message {
-	&:before {
-		content: "\e64d";
-	}
-} */
+.woocommerce-message:before {
+  content: "\e015";
+}
+
 .woocommerce-form-coupon-toggle .woocommerce-info:before,
 .woocommerce-form-login-toggle .woocommerce-info:before {
   display: none;
