--- a/assets/css/sass/woocommerce/my-account.scss
+++ b/assets/css/sass/woocommerce/my-account.scss
@@ -27,4 +27,12 @@ table.shop_table {
     top: .7em;
     cursor: pointer;
 
+	&:before {
+		font-family: 'Woocommerce';
+    	content: "\e010";
+	}
+
+	&.display-password {
+		opacity: .6;
+	}
 }
