--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -477,6 +477,13 @@ $size: 40px;
 
 
 .woocommerce-info {
+	display: flex;
+	align-items: center;
+
+	a {
+		order: 2;
+		margin-left: auto;
+	}
 	input[type="submit"] {
 		padding: 0 5px;
 		margin-left: 5px;
