--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -87,6 +87,10 @@
 .menu-item {
 	.menu-item-icon {
 		margin-right: 10px;
+		.woostify-svg-icon {
+			position: relative;
+			top: 1px;
+		}
 	}
 
 	.menu-item-text {
