--- a/style.css
+++ b/style.css
@@ -5014,6 +5014,11 @@ article p:last-child {
   margin-right: 10px;
 }
 
+.menu-item .menu-item-icon .woostify-svg-icon {
+  position: relative;
+  top: 1px;
+}
+
 .menu-item .menu-item-text {
   flex-grow: 1;
   word-break: normal;
