Update missing icon in Product Navigation widget

--- a/assets/css/sass/base/layout/breadcrumb.scss
+++ b/assets/css/sass/base/layout/breadcrumb.scss
@@ -139,10 +139,15 @@
 				pointer-events: auto;
 			}
 		}
+
+		.product-nav-icon {
+			display: inline-flex;
+		}
 	}
 
 	.product-nav-item-text {
 		text-transform: uppercase;
+		display: inline-flex;
 
 		@media (min-width: $screen-md) {
 			padding-bottom: 15px;
