--- a/assets/css/sass/base/layout/blog/blog-list.scss
+++ b/assets/css/sass/base/layout/blog/blog-list.scss
@@ -92,7 +92,7 @@
             text-transform: uppercase;
 
             &:not(.prev):not(.next){
-                width: 29px;
+                min-width: 29px;
                 height: 29px;
                 border-radius: 50%;
                 border: 1px solid $tr;
