--- a/style.css
+++ b/style.css
@@ -6469,7 +6469,7 @@ header.elementor-element {
 }
 
 .pagination ul .page-numbers:not(.prev):not(.next), .woocommerce-pagination ul .page-numbers:not(.prev):not(.next) {
-  width: 29px;
+  min-width: 29px;
   height: 29px;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0);
