Add option hide cart subtotal when zero

--- a/assets/css/sass/base/layout/header.scss
+++ b/assets/css/sass/base/layout/header.scss
@@ -155,6 +155,12 @@
 			display: none;
 		}
 	}
+
+	.woostify-header-total-price {
+		&.hide-zero-val.hide {
+			display: none;
+		}
+	}
 }
 
 .my-account {
