--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -975,3 +975,33 @@ $size: 40px;
 #wc-stripe-payment-request-wrapper {
 	width: 100%;
 }
+
+.woostify-view-more {
+	text-align: center;
+	position: relative;
+
+	.w-view-more-button {
+		position: relative;
+
+		&.circle-loading {
+			display: inline-flex;
+			align-items: center;
+
+			.w-view-more-label {
+				padding-left: 5px;
+			}
+
+			&:before {
+				position: static;
+				transform: none;
+			}
+		}
+	}
+
+	.woostify-loading-status {
+		display: none;
+		&:before{
+			@include loading();
+		}
+	}
+}
