--- a/style.css
+++ b/style.css
@@ -8061,6 +8061,38 @@ header.elementor-element {
   padding: 30px 0;
 }
 
+.cart-sidebar-content .woocommerce-mini-cart__empty-message .woostify-empty-cart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 6vh;
+}
+
+.cart-sidebar-content .woocommerce-mini-cart__empty-message .woostify-empty-cart .message-icon {
+  height: 80px;
+  background: #f8f8f8;
+  width: 80px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.cart-sidebar-content .woocommerce-mini-cart__empty-message .woostify-empty-cart .message-icon svg {
+  width: 30px;
+  height: 30px;
+}
+
+.cart-sidebar-content .woocommerce-mini-cart__empty-message .woostify-empty-cart .message-text {
+  margin: 18px 0 20px;
+}
+
+.cart-sidebar-content .woocommerce-mini-cart__empty-message .woostify-empty-cart .button.continue-shopping {
+  width: 100%;
+  text-align: center;
+  margin-top: 6vh;
+}
+
 .cart-sidebar-content .variation {
   margin: 5px 0;
   font-size: 13px;
