--- a/style.css
+++ b/style.css
@@ -6401,6 +6401,79 @@ header.elementor-element {
   width: 100%;
 }
 
+@-webkit-keyframes w-fadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(-20px, 0, 0);
+    transform: translate3d(-20px, 0, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+@keyframes w-fadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(-20px, 0, 0);
+    transform: translate3d(-20px, 0, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+.free-shipping-progress-bar .progress-bar-message {
+  text-align: center;
+}
+
+.free-shipping-progress-bar .progress-bar-message .woocommerce-Price-amount {
+  font-weight: bold;
+}
+
+.free-shipping-progress-bar .progress-bar-rail {
+  line-height: 5px;
+  height: 5px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin-top: 12px;
+}
+
+.free-shipping-progress-bar .progress-bar-status {
+  display: flex;
+  z-index: 1;
+  height: inherit;
+  position: relative;
+  animation: .6s w-fadeInLeft;
+}
+
+.free-shipping-progress-bar .progress-bar-status.success .progress-bar-indicator {
+  background: #67bb67;
+}
+
+.free-shipping-progress-bar .progress-bar-left {
+  background: rgba(0, 0, 0, 0.1);
+  height: 3px;
+  flex-grow: 1;
+}
+
+.free-shipping-progress-bar .progress-bar-indicator {
+  background: linear-gradient(270deg, #1346af 0, #ffffff 200%);
+  background-color: #1346af;
+  flex-grow: 1;
+}
+
+.free-shipping-progress-bar .progress-percent {
+  padding: 0 .5em;
+  font-weight: 900;
+  font-size: 1.1em;
+}
+
 .products {
   width: 100%;
   clear: both;
@@ -7979,29 +8052,33 @@ header.elementor-element {
   }
 }
 
+.cart-sidebar-content.has-fst {
+  height: -webkit-calc( 100% - 255px);
+  height: calc( 100% - 255px);
+}
+
+@media (max-width: 599px) {
+  .cart-sidebar-content.has-fst {
+    height: -webkit-calc( 100% - 205px);
+    height: calc( 100% - 205px);
+  }
+}
+
 .cart-sidebar-content .woocommerce-mini-cart__total {
-  position: absolute;
   margin-bottom: 0;
-  bottom: 120px;
   background-color: #fff;
   height: 40px;
   border-top: 1px solid #ddd;
-  left: 30px;
-  right: 30px;
   align-items: flex-end;
 }
 
 @media (max-width: 599px) {
   .cart-sidebar-content .woocommerce-mini-cart__total {
-    right: 15px;
-    left: 15px;
-    bottom: 85px;
     height: 30px;
   }
 }
 
-.cart-sidebar-content .woocommerce-mini-cart__buttons {
-  margin-bottom: 0;
+.cart-sidebar-content .woocommerce-mini-cart__bottom {
   position: absolute;
   bottom: 30px;
   right: 30px;
@@ -8009,11 +8086,15 @@ header.elementor-element {
 }
 
 @media (max-width: 599px) {
-  .cart-sidebar-content .woocommerce-mini-cart__buttons {
+  .cart-sidebar-content .woocommerce-mini-cart__bottom {
     bottom: 15px;
     right: 15px;
     left: 15px;
   }
+}
+
+.cart-sidebar-content .woocommerce-mini-cart__buttons {
+  margin-bottom: 0;
 }
 
 .cart-sidebar-content .woocommerce-mini-cart__buttons a {
