Update load full effect

--- a/assets/css/sass/woocommerce/cart-sidebar.scss
+++ b/assets/css/sass/woocommerce/cart-sidebar.scss
@@ -115,6 +115,15 @@ $media: 599px;
     .blockUI {
 		display: none !important;
 	}
+
+	canvas {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		z-index: 9;
+		left: 0;
+		top: 0;
+	}
 }
 
 .shop-cart-count,
