--- a/style.css
+++ b/style.css
@@ -7970,6 +7970,15 @@ header.elementor-element {
   display: none !important;
 }
 
+#shop-cart-sidebar canvas {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 9;
+  left: 0;
+  top: 0;
+}
+
 .shop-cart-count,
 .wishlist-item-count {
   padding: 0 5px;
