--- a/assets/css/sass/woocommerce/woocommerce.scss
+++ b/assets/css/sass/woocommerce/woocommerce.scss
@@ -1013,6 +1013,7 @@ $size: 40px;
 }
 
 .free-shipping-progress-bar {
+	margin-top: 10px;
 	.progress-bar-message {
 		text-align: center;
 		.woocommerce-Price-amount {
